--- a/branches/Free/Plugin-ViewControl/CMakeLists.txt
+++ b/branches/Free/Plugin-ViewControl/CMakeLists.txt
@@ -4,4 +4,4 @@ if (EXISTS ${CMAKE_SOURCE_DIR}/ObjectTypes/TSplineMesh)
   add_definitions (-DENABLE_TSPLINEMESH_SUPPORT)
 endif ()
 
-openflipper_plugin (DIRS TSplineMesh)
+openflipper_plugin (DIRS TSplineMesh INSTALLDATA Icons)
