--- a/branches/Free/OpenFlipper/Documentation/UserTarget/doxy.config.in
+++ b/branches/Free/OpenFlipper/Documentation/UserTarget/doxy.config.in
@@ -675,8 +675,10 @@ EXCLUDE_SYMLINKS       = NO
 # for example use the pattern */test/*
 
 EXCLUDE_PATTERNS       = */Debian*/* \
-                         */.svn/* \
-                         SimpleOpt*
+                         .svn \
+                         SimpleOpt* \
+                         *CPack_Packages* \
+                         build-*
 
 # The EXCLUDE_SYMBOLS tag can be used to specify one or more symbol names
 # (namespaces, classes, functions, etc.) that should be excluded from the
