--- a/OpenFlipper/Documentation/DeveloperTarget/doxy.config.in
+++ b/OpenFlipper/Documentation/DeveloperTarget/doxy.config.in
@@ -678,8 +678,11 @@ EXCLUDE_SYMLINKS       = NO
 # for example use the pattern */test/*
 
 EXCLUDE_PATTERNS       = */Debian*/* \
-                         */.svn/* \
-                         SimpleOpt*
+                         *.svn* \
+                         SimpleOpt* \
+                         *CPack_Packages* \
+                         build-*
+
 
 # The EXCLUDE_SYMBOLS tag can be used to specify one or more symbol names
 # (namespaces, classes, functions, etc.) that should be excluded from the
