--- a/branches/Free/OpenFlipper/CoreApp/CMakeLists.txt
+++ b/branches/Free/OpenFlipper/CoreApp/CMakeLists.txt
@@ -166,6 +166,8 @@ if ( EXISTS ${CMAKE_SOURCE_DIR}/branding )
     acg_copy_after_build (OpenFlipper "${CMAKE_SOURCE_DIR}/branding/win" "${CMAKE_BINARY_DIR}/Build/${ACG_PROJECT_DATADIR}/Icons")
   elseif( APPLE )
     acg_copy_after_build (OpenFlipper "${CMAKE_SOURCE_DIR}/branding/mac" "${CMAKE_BINARY_DIR}/Build/${ACG_PROJECT_DATADIR}/Icons")
+  elseif()
+    acg_copy_after_build (OpenFlipper "${CMAKE_SOURCE_DIR}/branding/linux" "${CMAKE_BINARY_DIR}/Build/${ACG_PROJECT_DATADIR}/Icons")
   endif()
 endif()
 
