--- a/branches/Free/CMakeLists.txt
+++ b/branches/Free/CMakeLists.txt
@@ -89,10 +89,14 @@ of_add_plugins ()
 # ========================================================================
 
 if (WIN32 )
+
   # Plugins collected a list of required libdirs for getting 
   # their DLLS on windows:
   get_property( WINDOWS_COPY_LIBDIRS GLOBAL PROPERTY WINDOWS_LIBRARY_DIR_LIST )
-  list(REMOVE_DUPLICATES WINDOWS_COPY_LIBDIRS)
+  
+  if ( WINDOWS_COPY_LIBDIRS )
+    list(REMOVE_DUPLICATES WINDOWS_COPY_LIBDIRS)
+  endif()
 
   # prepare bundle generation cmake file and add a build target for it
   configure_file ("${CMAKE_SOURCE_DIR}/OpenFlipper/cmake/fixbundle.cmake.win.in"
