--- a/branches/Free/OpenFlipper/LicenseManager/salt.hh.example
+++ b/branches/Free/OpenFlipper/LicenseManager/salt.hh.example
@@ -53,22 +53,30 @@
     Modify the Salts below to create your own plugin keys. Then
     copy this file to your plugin directory and name it "salt.hh".
 
-    Additionally add the option 
+    Add the following include to your plugin file:
+    
+    \code
+      #include <OpenFlipper/LicenseManager/LicenseManager.hh>
+    \endcode
 
-    LICENSEMANAGER 
-
-    to your CMakeLists generator (e.g.  openflipper_plugin (LICENSEMANAGER ) )
     
     Additionally don't derive your Plugin from QObject but from LicenseManager
     which has to be the first one in your class definition.
     
     \code
       // Before:
-      class ColorPlugin : public QObject, BaseInterface, MenuInterface, ScriptInterface, ToolbarInterface, StatusbarInterface
+      class ExamplePlugin : public QObject, BaseInterface, MenuInterface, ScriptInterface, ToolbarInterface, StatusbarInterface
       
       // After:
-      class ColorPlugin : public LicenseManager, BaseInterface, MenuInterface, ScriptInterface, ToolbarInterface, StatusbarInterface
+      class ExamplePlugin : public LicenseManager, BaseInterface, MenuInterface, ScriptInterface, ToolbarInterface, StatusbarInterface
     \endcode
+    
+    Additionally add the option
+    
+    LICENSEMANAGER 
+
+    to your CMakeLists generator (e.g.  openflipper_plugin (LICENSEMANAGER ) )
+    
 
     When the plugin is now build, an additional LicenseManager is generated which shows
     a widget on execution. Enter the information which is given by OpenFlipper when
