--- a/OpenFlipper/LicenseManager/salt.hh.example
+++ b/OpenFlipper/LicenseManager/salt.hh.example
@@ -43,45 +43,16 @@
 /* Salt file for security interface 
 */
 
-/** This Macro creates a salt (basicallz a key) for your plugin which is added to the 
+/** This Macro creates a salt (basically a key) for your plugin which is added to the 
     license files. You have to keep this salt file
-    !!!SECRET!!!, 
-    otherwise everybody can create licenses for your Plugin. The special 
+    !!!SECRET!!!, otherwise everybody can create licenses for your Plugin. The special 
     form of this macro makes the salt string invisible inside the binary 
     of the plugin so that it is not easy to recover from it.
 
     Modify the Salts below to create your own plugin keys. Then
     copy this file to your plugin directory and name it "salt.hh".
 
-    Add the following include to your plugin file:
-    
-    \code
-      #include <OpenFlipper/LicenseManager/LicenseManager.hh>
-    \endcode
-
-    
-    Additionally don't derive your Plugin from QObject but from LicenseManager
-    which has to be the first one in your class definition.
-    
-    \code
-      // Before:
-      class ExamplePlugin : public QObject, BaseInterface, MenuInterface, ScriptInterface, ToolbarInterface, StatusbarInterface
-      
-      // After:
-      class ExamplePlugin : public LicenseManager, BaseInterface, MenuInterface, ScriptInterface, ToolbarInterface, StatusbarInterface
-    \endcode
-    
-    Additionally add the option
-    
-    LICENSEMANAGER 
-
-    to your CMakeLists generator (e.g.  openflipper_plugin (LICENSEMANAGER ) )
-    
-
-    When the plugin is now build, an additional LicenseManager is generated which shows
-    a widget on execution. Enter the information which is given by OpenFlipper when
-    plugin loading fails due to a license issue and execute it. It will create the required
-    license file to run the plugin.
+    Details on how to use license management can be found here on the \ref securityInterfacePage . 
 */
 
 /// Specify your contact mail address
